--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       };
     </script>
     <!-- Umami 统计 -->
-    <script defer src="https://um.ruom.top/script.js" data-website-id="17708376-4a42-47be-9554-8e7eb1675af9"></script>
+    <script defer src="https://umami.xingji.fun/umami" data-website-id="d70abc67-8060-417e-9634-1b8b86f2b1e0"></script>
     <!-- 字体 -->
     <link rel="stylesheet" href="%VITE_APP_FONT_CSS_URL%">
   </head>
